# Actionator

./: README.md  executor_test.py  pyproject.toml
actionator/: __init__.py
actionator/core/: __init__.py
static/: core.css  index.html  layout.js
templates/: action_bar.html  start_form.html
